Code Cleaning and included spectogram

--- a/Assignment/App.ipynb
+++ b/Assignment/App.ipynb
@@ -43,7 +43,9 @@
     "import librosa\n",
     "import librosa.display\n",
     "import numpy as np\n",
-    "import time"
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -174,6 +176,9 @@
     "    \"\"\"\n",
     "    # Reading the audio file, whilst ensuring the sampling rate is 16kHz\n",
     "    audio, sampling_rate = librosa.load(audio_path, sr=16000)\n",
+    "\n",
+    "    # Preprocessing the audio\n",
+    "    audio /= np.max(np.abs(audio), axis=0)\n",
     "    \n",
     "    # Calculating the number of samples per chunk\n",
     "    samples_per_chunk = int(sampling_rate * chunk_size)\n",
@@ -190,8 +195,17 @@
     "        start_sample = i * samples_per_chunk\n",
     "        end_sample = (i + 1) * samples_per_chunk\n",
     "\n",
+    "        # Calculating the audio chunk\n",
+    "        audio_chunk = audio[start_sample:end_sample]\n",
+    "\n",
+    "        # Extracting the spectrogram through short-time Fourier transform (STFT) using librosa\n",
+    "        spectrogram = librosa.stft(audio_chunk, n_fft=512, hop_length=160, win_length=400)\n",
+    "\n",
+    "        # Converting the raw amplitude rsults to decibels (log scale)\n",
+    "        spectrogram = librosa.amplitude_to_db(spectrogram, ref=np.max)\n",
+    "\n",
     "        # Appending the audio chunk to the list of audio chunks\n",
-    "        audio_chunks.append(audio[start_sample:end_sample])\n",
+    "        audio_chunks.append(spectrogram)\n",
     "    \n",
     "    # Returning the list of audio chunks\n",
     "    return audio_chunks"
@@ -315,8 +329,7 @@
     "\n",
     "    \n",
     "    # Returning the training, validation and testing sets\n",
-    "    return training_set, validation_set, testing_set\n",
-    "    "
+    "    return training_set, validation_set, testing_set"
    ]
   },
   {
