Added MFCC feature extractor

--- a/Assignment/App.ipynb
+++ b/Assignment/App.ipynb
@@ -81,7 +81,11 @@
     "# The number of mel-spectrogram frames to extract from each audio chunk\n",
     "MEL_SPEC_FRAME_SIZE = 1024\n",
     "# The number of speakers/classes in the dataset\n",
-    "NUM_CLASSES = 285"
+    "NUM_CLASSES = 285\n",
+    "# Mel-spectrogram flag\n",
+    "MEL_SPECTROGRAM = 1\n",
+    "# MFCC flag\n",
+    "MFCC = 0"
    ]
   },
   {
@@ -172,11 +176,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mNumber of speakers found: \u001b[0m285\n",
-      "\u001b[1mNumber of wav files found: \u001b[0m2850\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: 'c:\\\\Users\\\\User\\\\Documents\\\\Github\\\\Speeh-Technology\\\\Assignment\\\\ABI-1 Corpus\\\\accents'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\User\\Documents\\Github\\Speeh-Technology\\Assignment\\App.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/User/Documents/Github/Speeh-Technology/Assignment/App.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Retrieving the list of speaker roots in the data path\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/User/Documents/Github/Speeh-Technology/Assignment/App.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m speaker_roots \u001b[39m=\u001b[39m get_speaker_roots_in_data_path()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/User/Documents/Github/Speeh-Technology/Assignment/App.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\033\u001b[39;00m\u001b[39m[1m\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39mNumber of speakers found: \u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m\\033\u001b[39;00m\u001b[39m[0m\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(\u001b[39mlen\u001b[39m(speaker_roots)))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/User/Documents/Github/Speeh-Technology/Assignment/App.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Retrieving the list of wav files in the data path\u001b[39;00m\n",
+      "\u001b[1;32mc:\\Users\\User\\Documents\\Github\\Speeh-Technology\\Assignment\\App.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Documents/Github/Speeh-Technology/Assignment/App.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m speaker_list \u001b[39m=\u001b[39m []\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Documents/Github/Speeh-Technology/Assignment/App.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m# Retrieving the list of accent subfolders\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/User/Documents/Github/Speeh-Technology/Assignment/App.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m accent_subfolders \u001b[39m=\u001b[39m [f\u001b[39m.\u001b[39mpath \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39;49mscandir(datapath) \u001b[39mif\u001b[39;00m f\u001b[39m.\u001b[39mis_dir()]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Documents/Github/Speeh-Technology/Assignment/App.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m# Iterating through the accent subfolders\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Documents/Github/Speeh-Technology/Assignment/App.ipynb#X13sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mfor\u001b[39;00m accent \u001b[39min\u001b[39;00m accent_subfolders:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Documents/Github/Speeh-Technology/Assignment/App.ipynb#X13sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39m# Iterating through the gender\u001b[39;00m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'c:\\\\Users\\\\User\\\\Documents\\\\Github\\\\Speeh-Technology\\\\Assignment\\\\ABI-1 Corpus\\\\accents'"
      ]
     }
    ],
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,17 +273,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def chunk_audio(audio_path, chunk_size=3, plot=False):\n",
+    "def chunk_audio(audio_path, chunk_size=3, plot=False, feature_extractor=MEL_SPECTROGRAM):\n",
     "    \"\"\"Function to chunk the audio file into specified-second segments.\n",
     "    \n",
     "    Args:\n",
     "        audio_path (str): Path to the audio file.\n",
     "        chunk_size (int): Duration of each audio chunk in seconds (default is 3 seconds).\n",
     "        plot (bool): Flag to plot the audio chunks (default is False).\n",
+    "        feature_extractor (int): Flag to indicate the feature extractor to be used (default is MEL_SPECTROGRAM).\n",
     "    \n",
     "    Returns:\n",
     "        audio_chunks (list): List of audio chunks.\n",
@@ -304,23 +313,40 @@
     "        # Calculating the audio chunk\n",
     "        audio_chunk = audio[start_sample:end_sample]\n",
     "\n",
-    "        # Extracting the mel spectrogram using librosa\n",
-    "        mel_spectrogram = librosa.feature.melspectrogram(y=audio_chunk, \n",
-    "                                                         sr=sampling_rate,\n",
-    "                                                         center=True,\n",
-    "                                                         n_fft=MEL_SPEC_FRAME_SIZE,\n",
-    "                                                         hop_length=int(MEL_SPEC_FRAME_SIZE / 2),\n",
-    "                                                         n_mels=N_MELS)\n",
+    "        if feature_extractor == MFCC:\n",
+    "            # Extracting the MFCCs using librosa\n",
+    "            mfcc = librosa.feature.mfcc(y=audio_chunk, \n",
+    "                                        sr=sampling_rate,\n",
+    "                                        n_fft=MEL_SPEC_FRAME_SIZE,\n",
+    "                                        hop_length=int(MEL_SPEC_FRAME_SIZE / 2),\n",
+    "                                        n_mfcc=N_MELS)\n",
     "\n",
-    "        # Converting the raw amplitude results to decibels (log scale)\n",
-    "        mel_spectrogram = librosa.power_to_db(mel_spectrogram, ref=1.0)\n",
+    "            # Converting the raw amplitude results to decibels (log scale)\n",
+    "            mfcc = librosa.power_to_db(mfcc, ref=1.0)\n",
+    "\n",
+    "            # Setting the spectrogram to be the MFCCs\n",
+    "            spectrogram = mfcc\n",
+    "        else:\n",
+    "            # Extracting the mel spectrogram using librosa\n",
+    "            mel_spectrogram = librosa.feature.melspectrogram(y=audio_chunk, \n",
+    "                                                            sr=sampling_rate,\n",
+    "                                                            center=True,\n",
+    "                                                            n_fft=MEL_SPEC_FRAME_SIZE,\n",
+    "                                                            hop_length=int(MEL_SPEC_FRAME_SIZE / 2),\n",
+    "                                                            n_mels=N_MELS)\n",
+    "\n",
+    "            # Converting the raw amplitude results to decibels (log scale)\n",
+    "            mel_spectrogram = librosa.power_to_db(mel_spectrogram, ref=1.0)\n",
+    "\n",
+    "            # Setting the spectrogram to be the mel spectrogram\n",
+    "            spectrogram = mel_spectrogram\n",
     "\n",
     "        # Plotting the spectrogram\n",
     "        if plot:\n",
-    "            display_spectrogram(mel_spectrogram, sampling_rate=sampling_rate, title='Mel Spectrogram of Audio Chunk ' + str(i + 1))\n",
+    "            display_spectrogram(spectrogram, sampling_rate=sampling_rate, title='Mel Spectrogram of Audio Chunk ' + str(i + 1))\n",
     "\n",
     "        # Appending the audio chunk to the list of audio chunks\n",
-    "        audio_chunks.append(mel_spectrogram)\n",
+    "        audio_chunks.append(spectrogram)\n",
     "    \n",
     "    # Returning the list of audio chunks\n",
     "    return audio_chunks"
@@ -335,11 +361,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_data(speaker_roots, training_set_ratio, validation_set_ratio, testing_set_ratio, do_display=False, plot=False):\n",
+    "def preprocess_data(speaker_roots, training_set_ratio, validation_set_ratio, testing_set_ratio, do_display=False, plot=False, feature_extractor=MEL_SPECTROGRAM):\n",
     "    \"\"\"\"Function to preprocess, chunk and split the data.\n",
     "\n",
     "    Args:\n",
@@ -349,6 +375,7 @@
     "        testing_set_ratio (float): Ratio of the testing set.\n",
     "        do_display (bool): Boolean to display the audio chunks (default is False).\n",
     "        plot (bool): Boolean to plot the spectrogram (default is False).\n",
+    "        feature_extractor (int): Flag to indicate the feature extractor to be used (default is MEL_SPECTROGRAM).\n",
     "\n",
     "    Returns:\n",
     "        training_set (list): List of training examples.\n",
@@ -382,7 +409,7 @@
     "        # Iterating through the wav files\n",
     "        for wav_file in speaker_wav_files:\n",
     "            # Chunking the audio file into 3 seconds segments\n",
-    "            utterances.extend(chunk_audio(wav_file, plot=plot))\n",
+    "            utterances.extend(chunk_audio(wav_file, plot=plot, feature_extractor=feature_extractor))\n",
     "        \n",
     "        # Appending the list of utterances to the dictionary\n",
     "        speaker_to_utterances[speaker] = utterances\n",
@@ -455,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1041,12 +1068,12 @@
    ],
    "source": [
     "# Calling the preprocess_data function\n",
-    "training_set, validation_set, testing_set = preprocess_data(speaker_roots, 0.6, 0.2, 0.2, do_display=True, plot=False)"
+    "training_set, validation_set, testing_set = preprocess_data(speaker_roots, 0.6, 0.2, 0.2, do_display=True, plot=True, feature_extractor=MFCC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
