--- a/Assignment/App.ipynb
+++ b/Assignment/App.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1725,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1930,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2272,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3207,7 +3207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3267,7 +3267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3549,10 +3549,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91/91 [==============================] - 5s 53ms/step - loss: 0.6399 - accuracy: 0.8412\n",
+      "91/91 [==============================] - 5s 53ms/step\n",
+      "\u001b[35mTest Accuracy: \u001b[0m0.841\n",
+      "\u001b[35mTest Loss: \u001b[0m0.64\n",
+      "\u001b[35mPrecision: \u001b[0m0.862\n",
+      "\u001b[35mRecall: \u001b[0m0.841\n",
+      "\u001b[35mF1 Score: \u001b[0m0.838\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loading the model\n",
+    "model4_mfcc = keras.models.load_model('model4_mfcc.h5')\n",
+    "\n",
+    "# Extracting the labels\n",
+    "classes = [speaker_root.split('\\\\')[-1] for speaker_root in speaker_roots]\n",
+    "\n",
+    "# Displaying the metrics for model 4 on the MFCCs\n",
+    "display_metrics(model4_mfcc, x_test_mfcc, y_test_encoded_mfcc, 'Confusion Matrix for Model 4 (MFCCs)', classes, do_save=True, save_path='model4_mfcc_metrics', subset=list(range(30)))"
+   ]
   },
   {
    "cell_type": "code",
@@ -3586,10 +3609,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91/91 [==============================] - 4s 45ms/step - loss: 0.3131 - accuracy: 0.9196\n",
+      "91/91 [==============================] - 4s 45ms/step\n",
+      "\u001b[35mTest Accuracy: \u001b[0m0.92\n",
+      "\u001b[35mTest Loss: \u001b[0m0.313\n",
+      "\u001b[35mPrecision: \u001b[0m0.929\n",
+      "\u001b[35mRecall: \u001b[0m0.92\n",
+      "\u001b[35mF1 Score: \u001b[0m0.919\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loading the model\n",
+    "model5_mfcc = keras.models.load_model('model5_mfcc.h5')\n",
+    "\n",
+    "# Extracting the labels\n",
+    "classes = [speaker_root.split('\\\\')[-1] for speaker_root in speaker_roots]\n",
+    "\n",
+    "# Displaying the metrics for model 5 on the MFCCs\n",
+    "display_metrics(model5_mfcc, x_test_mfcc, y_test_encoded_mfcc, 'Confusion Matrix for Model 5 (MFCCs)', classes, do_save=True, save_path='model5_mfcc_metrics', subset=list(range(30)))"
+   ]
   },
   {
    "cell_type": "code",
@@ -3623,10 +3669,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91/91 [==============================] - 5s 47ms/step - loss: 0.3131 - accuracy: 0.9196\n",
+      "91/91 [==============================] - 5s 49ms/step\n",
+      "\u001b[35mTest Accuracy: \u001b[0m0.92\n",
+      "\u001b[35mTest Loss: \u001b[0m0.313\n",
+      "\u001b[35mPrecision: \u001b[0m0.929\n",
+      "\u001b[35mRecall: \u001b[0m0.92\n",
+      "\u001b[35mF1 Score: \u001b[0m0.919\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loading the model\n",
+    "model6_mfcc = keras.models.load_model('model6_mfcc.h5')\n",
+    "\n",
+    "# Extracting the labels\n",
+    "classes = [speaker_root.split('\\\\')[-1] for speaker_root in speaker_roots]\n",
+    "\n",
+    "# Displaying the metrics for model 6 on the MFCCs\n",
+    "display_metrics(model6_mfcc, x_test_mfcc, y_test_encoded_mfcc, 'Confusion Matrix for Model 6 (MFCCs)', classes, do_save=True, save_path='model6_mfcc_metrics', subset=list(range(30)))"
+   ]
   }
  ],
  "metadata": {
