Minor changes to diagrams

--- a/Assignment/App.ipynb
+++ b/Assignment/App.ipynb
@@ -323,6 +323,11 @@
     "\n",
     "            # Setting the spectrogram to be the MFCCs\n",
     "            spectrogram = mfcc\n",
+    "\n",
+    "            # Plotting the mfcc\n",
+    "            if plot:\n",
+    "                display_spectrogram(spectrogram, sampling_rate=sampling_rate, title='MFCC of Audio Chunk ' + str(i + 1))\n",
+    "\n",
     "        else:\n",
     "            # Extracting the mel spectrogram using librosa\n",
     "            mel_spectrogram = librosa.feature.melspectrogram(y=audio_chunk, \n",
@@ -338,9 +343,9 @@
     "            # Setting the spectrogram to be the mel spectrogram\n",
     "            spectrogram = mel_spectrogram\n",
     "\n",
-    "        # Plotting the spectrogram\n",
-    "        if plot:\n",
-    "            display_spectrogram(spectrogram, sampling_rate=sampling_rate, title='Mel Spectrogram of Audio Chunk ' + str(i + 1))\n",
+    "            # Plotting the spectrogram\n",
+    "            if plot:\n",
+    "                display_spectrogram(spectrogram, sampling_rate=sampling_rate, title='Mel Spectrogram of Audio Chunk ' + str(i + 1))\n",
     "\n",
     "        # Appending the audio chunk to the list of audio chunks\n",
     "        audio_chunks.append(spectrogram)\n",
