Changes to notebook and added requirements

--- a/Assignment/App.ipynb
+++ b/Assignment/App.ipynb
@@ -16,7 +16,13 @@
     "**<h3>1. Introduction</h3>**\n",
     "\n",
     "<p>\n",
-    "<b>Speaker Identification (SID)</b>, is the task of determining a speaker's identity from a particular speech sample that has been chosen from a group of recognised speakers. Speech data from various speakers is gathered and used to train a model that represents the hypothetical speaker, or a model that learns to discriminate among speakers, in order to construct a SID system.\n",
+    "<b>Speaker identification (SID)</b> is the task of determining a speaker’s identity from a specific audio sample chosen from a pool of known speakers. Having applications in forensics, security, and customization [1], SID may be expressed as a pattern recognition problem. As described in [2], <i>feature extraction</i> and <i>feature classification</i> are two necessary components in the SID pipeline that enable the classification of an input voice segment as belonging to one of N known enrolled speakers\n",
+    "</p>\n",
+    "<br>\n",
+    "<p>\n",
+    "[1] S. Sremath Tirumala and S. R. Shahamiri, “A review on deep learning approaches in speaker identification,” 11 2016, pp. 142–147.\n",
+    "\n",
+    "[2] A. Antony and R. Gopikakumari, “Speaker identification based on combination of mfcc and umrt based features,”Procedia Computer Science, vol. 143, pp. 250–257, 2018, 8th International Conference on Advances in Computing & Communications (ICACC-2018). [Online]. Available: https://www.sciencedirect.com/science/article/pii/S1877050918320908\n",
     "</p>"
    ]
   },
@@ -228,14 +234,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def display_spectrogram(spectrogram, sampling_rate=SAMPLE_RATE, y_axis='mel', title='Linear Spectrogram'):\n",
+    "def display_spectrogram(spectrogram, sampling_rate=SAMPLE_RATE, y_axis='mel', title='Mel Spectrogram'):\n",
     "    \"\"\"Function to display the spectrogram.\n",
     "    \n",
     "    Args:\n",
     "        spectrogram (numpy.ndarray): Spectrogram to be displayed.\n",
     "        sampling_rate (int): Sampling rate of the audio (default is 16000).\n",
     "        y_axis (str): Type of y-axis to be displayed (default is linear).\n",
-    "        title (str): Title of the plot (default is Linear Spectrogram).\n",
+    "        title (str): Title of the plot (default is Mel Spectrogram).\n",
     "    \"\"\"\n",
     "    # Setting the figure size\n",
     "    plt.figure(figsize=(20, 8))\n",
@@ -1807,9 +1813,8 @@
     "    # Encoding the labels using LabelEncoder\n",
     "    label_encoder = LabelEncoder()\n",
     "\n",
-    "    # Fitting and transforming labels for training data\n",
+    "    # Fitting and transforming labels for training data, validating data and testing data\n",
     "    y_train_encoded = label_encoder.fit_transform(y_train)\n",
-    "    # Transforming labels for validation and testing data\n",
     "    y_val_encoded = label_encoder.transform(y_val)\n",
     "    y_test_encoded = label_encoder.transform(y_test)\n",
     "\n",
@@ -2016,7 +2021,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<h4> Model 2: Increased Convolutional Layers</h4>**"
+    "**<h4> Model 2: Increased Convolutional Layer Depth</h4>**"
    ]
   },
   {
@@ -3176,7 +3181,7 @@
     "history = model6.fit(x_train_mel, y_train_encoded_mel, validation_data=(x_val_mel, y_val_encoded_mel), epochs=100, batch_size=32, callbacks=[early_stopping6])\n",
     "\n",
     "# Saving the model\n",
-    "model5.save('model6_mel.h5')\n",
+    "model6.save('model6_mel.h5')\n",
     "\n",
     "# Plotting the training and validation curves\n",
     "plot_curves(history, 'accuracy', 'Training and Validation Accuracy for Model 6 (Mel Spectrogram)', do_save=True, save_path='model6_mel_accuracy.png')"
@@ -3192,7 +3197,7 @@
     "history = model6.fit(x_train_mfcc, y_train_encoded_mfcc, validation_data=(x_val_mfcc, y_val_encoded_mfcc), epochs=100, batch_size=32, callbacks=[early_stopping6])\n",
     "\n",
     "# Saving the model\n",
-    "model5.save('model6_mfcc.h5')\n",
+    "model6.save('model6_mfcc.h5')\n",
     "\n",
     "# Plotting the training and validation curves\n",
     "plot_curves(history, 'accuracy', 'Training and Validation Accuracy for Model 6 (MFCCs)', do_save=True, save_path='model6_mfcc_accuracy.png')"
@@ -3812,7 +3817,7 @@
     }
    ],
    "source": [
-    "# Early stopping callback\n",
+    "# Early stopping callback (setting a patience of 3 to speed up the search)\n",
     "early_stopping = keras.callbacks.EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
     "\n",
     "# Instantiating the tuner\n",
@@ -3929,7 +3934,7 @@
     "# Setting the optimizer\n",
     "best_optimizer = keras.optimizers.Adam(learning_rate=0.001)\n",
     "\n",
-    "# Early stopping callback (Increased patience to 15, as the model is more complex)\n",
+    "# Early stopping callback (Increased patience to 10, to achieve better results)\n",
     "best_early_stopping = keras.callbacks.EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
     "\n",
     "# Compiling the model\n",
@@ -4080,7 +4085,7 @@
     }
    ],
    "source": [
-    "# Training the best model\n",
+    "# Training the best model (Increased epochs to 150, to achieve better results)\n",
     "history = best_model.fit(x_train_mel, y_train_encoded_mel, validation_data=(x_val_mel, y_val_encoded_mel), epochs=150, batch_size=256, callbacks=[best_early_stopping])\n",
     "\n",
     "# Saving the model\n",
