--- a/Assignment/App.ipynb
+++ b/Assignment/App.ipynb
@@ -1937,7 +1937,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<h4> Model 1: Base CNN followed by LSTM (CNN-LSTM)</h4>**"
+    "**<h4> Model 1: Multi-Layer CNN followed by LSTM with Batch Normalization and Dropout</h4>**\n",
+    "The following model architecture meticulously incorporates elements from both architectures listed in [3] and [4]. The model incorporates early feature extraction convolution layers modified from the structure suggested in [3], seamlessly followed by a single CNN-LSTM layer suggested by [4]. The addition of a Batch Normalization and Dropout layers was intended to regularize the flattened LSTM output, hence improving the model’s robustness. Finally, classification was performed by activating softmax in the final fully connected dense layer.\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "[3] Y. Lukic, C. Vogt, O. D ̈urr, and T. Stadelmann, “Speaker identification and clustering using convolutional neural networks,” in 2016 IEEE 26th International Workshop on Machine Learning for Signal Processing (MLSP), 2016, pp. 1–6.\n",
+    "\n",
+    "[4] Z. Zhao, H. Duan, G. Min, Y. Wu, Z. Huang, X. Zhuang, H. Xi, and M. Fu, “A lighten cnn-lstm model for speaker verification on embedded devices,” Future Generation Computer\n",
+    "Systems, vol. 100, pp. 751–758, 2019. [Online]. Available: https://www.sciencedirect.com/science/article/pii/S0167739X18330620"
    ]
   },
   {
