--- a/Assignment/App.ipynb
+++ b/Assignment/App.ipynb
@@ -16,7 +16,7 @@
     "**<h3>1. Introduction</h3>**\n",
     "\n",
     "<p>\n",
-    "<b>Speaker identification (SID)</b> is the task of determining a speaker’s identity from a specific audio sample chosen from a pool of known speakers. Having applications in forensics, security, and customization [1], SID may be expressed as a pattern recognition problem. As described in [2], <i>feature extraction</i> and <i>feature classification</i> are two necessary components in the SID pipeline that enable the classification of an input voice segment as belonging to one of N known enrolled speakers\n",
+    "<b>Speaker identification (SID)</b> is the task of determining a speaker’s identity from a specific audio sample chosen from a pool of known speakers. With applications in forensics, security, and customization [1], SID may be expressed as a pattern recognition problem. The SID pipeline, according to [2], is dependent on two critical components: <i>feature extraction</i> and <i>feature classification</i>. These factors work together to classify an input speech segment as belonging to one of N known enrolled speakers.\n",
     "</p>\n",
     "<br>\n",
     "<p>\n",
@@ -1937,15 +1937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<h4> Model 1: Multi-Layer CNN followed by LSTM with Batch Normalization and Dropout</h4>**\n",
-    "The following model architecture meticulously incorporates elements from both architectures listed in [3] and [4]. The model incorporates early feature extraction convolution layers modified from the structure suggested in [3], seamlessly followed by a single CNN-LSTM layer suggested by [4]. The addition of a Batch Normalization and Dropout layers was intended to regularize the flattened LSTM output, hence improving the model’s robustness. Finally, classification was performed by activating softmax in the final fully connected dense layer.\n",
-    "\n",
-    "\n",
-    "<br>\n",
-    "[3] Y. Lukic, C. Vogt, O. D ̈urr, and T. Stadelmann, “Speaker identification and clustering using convolutional neural networks,” in 2016 IEEE 26th International Workshop on Machine Learning for Signal Processing (MLSP), 2016, pp. 1–6.\n",
-    "\n",
-    "[4] Z. Zhao, H. Duan, G. Min, Y. Wu, Z. Huang, X. Zhuang, H. Xi, and M. Fu, “A lighten cnn-lstm model for speaker verification on embedded devices,” Future Generation Computer\n",
-    "Systems, vol. 100, pp. 751–758, 2019. [Online]. Available: https://www.sciencedirect.com/science/article/pii/S0167739X18330620"
+    "**<h4> Model 1: Multi-Layer CNN followed by LSTM with Batch Normalization and Dropout</h4>**"
    ]
   },
   {
@@ -4166,7 +4158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<h3>8. Analyzing the best model with respect to accent and gender bias</h3>**"
+    "**<h3>8. Analyzing the best model with respect to accent and gender accuracy</h3>**"
    ]
   },
   {
@@ -4386,7 +4378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
